Fix horizontal overflow

--- a/public/css/animation.css
+++ b/public/css/animation.css
@@ -91,7 +91,7 @@ ul.titles li {
     top:-665px;
     left:250px;
     height: 190px;
-    width: 750px;
+    width: 550px;
     font-size: 48px;
     text-align: left;
     line-height: 2em;
